fdo#66474 DOCX import: fix handling of mixed fixed/auto cell widths

Instead of checking if any cells have fixed width, check if all calls
have fixed with.  Regression from
74c5ed19f430327988194cdcd6bdff09591a93fa.

(cherry picked from commit 67163f5531c29ff1983661ba832bd205944b33f3)

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Change-Id: I58d3d16cbaa2c54a8a1ac309910336c72dcb39b7